Add missing pages in the agent SUMMARY

--- a/src/agent/SUMMARY.md.in
+++ b/src/agent/SUMMARY.md.in
@@ -32,11 +32,13 @@
 - [Internals](agent/internals.md)
   - [Installed Files](agent/internals.installed_files.md)
   - [Daemon]()
+    - [Events](agent/internals.daemon.events.md)
     - [Heartbeats](agent/internals.daemon.heartbeats.md)
       - [hb.unicast](agent/internals.daemon.heartbeats.unicast.md)
       - [hb.multicast](agent/internals.daemon.heartbeats.multicast.md)
       - [hb.disk](agent/internals.daemon.heartbeats.disk.md)
       - [hb.relay](agent/internals.daemon.heartbeats.relay.md)
+    - [Lifecycle](agent/internals.daemon.lifecycle.md)
     - [Quorum](agent/internals.daemon.quorum.md)
       - [Quorum example 1](agent/internals.daemon.quorum.example1.md)
       - [Quorum example 2](agent/internals.daemon.quorum.example2.md)
