Plug the daemon page content in the SUMMARY

--- a/src/agent/SUMMARY.md.in
+++ b/src/agent/SUMMARY.md.in
@@ -31,7 +31,7 @@
 - [Outputs](agent/outputs.md)
 - [Internals](agent/internals.md)
   - [Installed Files](agent/internals.installed_files.md)
-  - [Daemon]()
+  - [Daemon](agent/internals.daemon.md)
     - [Events](agent/internals.daemon.events.md)
     - [Heartbeats](agent/internals.daemon.heartbeats.md)
       - [hb.unicast](agent/internals.daemon.heartbeats.unicast.md)
